assets/css/style.css
@charset "utf-8";

body {
    color: #222;
    font-family: monospace, 'Courier New', Courier;
    line-height: 1.6em;
    padding: 1em;
    margin: auto;
    max-width: 72em;
    background: #fefefe;
    overflow-wrap: break-word;
}

h1,
h2 {
    line-height: 1.2em;
}

body.for-side-nav {
    display: grid;
    grid-template-columns: 280px 1fr;
    column-gap: 10px;
    max-width: 100%;
}

aside.for-side-nav {
    border-right: 1px solid;
}

li.for-side-nav {
    list-style: none;
}

ul.for-side-nav {
    padding-inline-start: 0.5em;
}

li:has(> input) {
    list-style: none;
}

a {
    color: #1168cc;
    text-decoration: none;
}

a:visited {
    color: grey;
}

a:hover {
    text-decoration: underline;
}

nav a:hover {
    font-weight: bold;
}

nav a:visited {
    color: #1168cc;
}

nav a.active {
    font-weight: bold;
    color: black;
}

summary.for-side-nav {
    /* Remove arrow for summary for chrome based browsers. */
    list-style: none;
    position: relative;
}

summary.for-side-nav::-webkit-details-marker {
    /* Remove arrow for summary for safari. */
    display: none;
}

div.side-nav-item {
    padding: 0.2rem;
}

div.side-nav-item:hover {
    background: #eee;
    border-radius: 4px;
}

div.side-nav-item > a {
    color: #1168cc;
    text-decoration: none;
}

div.side-nav-item a.currently-opened {
    font-weight: bold;
    color: black;
}

/* For expand button */
summary.for-side-nav::after {
    content: '';
    border-right: 3px solid;
    border-bottom: 3px solid;
    position: absolute;
    top: 0.75em;
    right: 0.75em;
    height: 0.5em;
    width: 0.5em;
    transform: rotate(-45deg) translateY(-0.1em);
    cursor: pointer;
}

details[open].for-side-nav > summary.for-side-nav::after {
    transform: rotate(45deg) translateY(-0.3em);
}

#menu-button {
    display: none;
}

@media (width <= 768px) {
    body.for-side-nav {
        display: grid;
        grid-template-columns: 1fr;
    }

    #menu-button {
        display: inline-block;
    }

    #side-nav-open {
        display: none;
    }

    #side-nav-open.active {
        display: block;
    }

    aside.for-side-nav {
        border-right: 0;
    }
}

code {
    color: #e01e5a;
    background-color: rgb(29 28 29 / 4%);
    border: 1px solid rgb(29 28 29 / 13%);
    border-radius: 3px;
    font-family: courier, monospace;
    padding: 0 3px;
}

pre code {
    color: #000;
    display: block;
    padding: 8px;
    line-height: 20px;
}

pre {
    margin-bottom: 0;
}

img {
    max-width: 100%;
    vertical-align: middle;
}

blockquote {
    color: #666;
    margin: 0;
    padding-left: 1em;
    border-left: 0.5em #eee solid;
}

hr {
    border: none;
    height: 2px;
    background-color: #ffb300;
}

table {
    font-size: smaller;
    border-spacing: 0;
    border: 1px solid #ccc;
    width: 100%;
    text-align: left;
}

th {
    font-weight: bold;
    padding: 8px;
}

td {
    padding: 8px;
}

kbd {
    background-color: #eee;
    border-radius: 3px;
    border: 1px solid #b4b4b4;
    box-shadow: 0 1px 1px rgb(0 0 0 / 20%), 0 2px 0 0 rgb(255 255 255 / 70%) inset;
    color: #333;
    display: inline-block;
    font-size: 0.85em;
    font-weight: 700;
    line-height: 1;
    padding: 2px 4px;
    white-space: nowrap;
}

/* CSS specific to table */
section > table > tbody > tr:nth-of-type(2n+1) {
    background-color: #eee;
}

section > table > tbody > tr th {
    background-color: #ddd;
}

section > table > tbody > tr:hover {
    background-color: #ffb90f;
}

.heading-anchor {
    color: gray;
}

.heading-anchor:hover {
    color: #1168cc;
}

.footnote-backref::before {
    content: 'go back ';
}

.footnote-backref:hover {
    color: #1168cc;
}

.footnote-ref:hover {
    color: #1168cc;
    text-decoration: underline;
}

.footnote-ref::before {
    content: '[';
}

.footnote-ref::after {
    content: ']';
}

.nowrap {
    white-space: nowrap;
}

.posted-by {
    font-size: x-small;
    padding: 10px 0;
    color: #333;
}

span.svg-icon > img {
    height: 1rem;
    max-width: 100%;
    max-height: 100%;
}

span.svg-icon {
    vertical-align: middle;
}

